<resources>
    <string name="app_name">Eleccion</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Usuario">Usuario</string>
    <string name="Password">Password</string>
    <string name="Entrar">Entrar</string>
    <string name="title_activity_view_menu_eleccion">Menu</string>
    <string name="title_activity_view_insert_usuario">Insertar Usuario</string>
    <string name="Identificacion">Identificacion</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Direccion">Direccion</string>
    <string name="Telefono">Telefono</string>
    <string name="Correo">Correo</string>
    <string name="Tipo_Usario">Tipo Usuario</string>
    <string name="Nick">Nick</string>
    <string name="Aceptar">Aceptar</string>
    <string name="title_activity_view_update_usuario">Actualizar Usuario</string>
    <string name="title_activity_view_insert_tipo">Insertar Tipo</string>
    <string name="title_activity_view_update_tipo">Actualizar Tipo</string>
    <string name="title_activity_view_insert_punto">Insertar Punto</string>
    <string name="title_activity_view_update_punto">Actualizar Punto</string>
    <string name="title_activity_view_insert_partido">Insertar Partido</string>
    <string name="Partido">Partido</string>
    <string name="title_activity_view_update_partido">Actualizar Partido</string>
    <string name="title_activity_view_insert_politico">Insertar Politico</string>
    <string name="Politico">Politico</string>
    <string name="Tipo">Tipo</string>
    <string name="title_activity_view_updata_politico">Actualizar Politico</string>
    <string name="title_activity_view_insert_mesa">Insertar Mesa</string>
    <string name="Numero">Numero</string>
    <string name="Nota">Nota</string>
    <string name="Punto">Punto</string>
    <string name="title_activity_view_update_mesa">Actualizar Mesa</string>
    <string name="title_activity_view_insert_mesa_politico">Insertar Votos</string>
    <string name="Mesa">Mesa</string>
    <string name="Votos">Votos</string>
    <string name="title_activity_view_list_tipo">Lista Tipos</string>
    <string name="title_activity_view_list_punto">Lista Puntos</string>
    <string name="Buscar">Buscar</string>
    <string name="title_activity_view_list_partido">Lista Partidos</string>
    <string name="title_activity_view_list_politico">Lista Politicos</string>
    <string name="title_activity_view_list_mesa">Lista Mesa</string>
    <string name="title_activity_view_update_mesa_politico">Actualizar Votos</string>
    <string name="title_activity_view_list_mesa_plitico">Lista Mesa Politicos</string>
    <string name="title_activity_view_menu_usuario">Menu Usuario</string>
    <string name="title_activity_view_list_usuario">Lista Usuarios</string>
</resources>
